<resources>
    <string name="app_name">SportsWear Store</string>
    <string name="slogan" translatable="false">SPORTWEAR STORE</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="place_Order">Place Order</string>
    <string name="SingIn">Sing In</string>
    <string name="SingUp">Sing Up</string>
    <string name="Altocontraste">High contrast</string>
    <string name="language">Languaje</string>
    <string name="Tamañodefuente">Text Size</string>
    <string name="Refresh">Refresh</string>
    <string name="ChangePassword">Change Password</string>
    <string name="Cart">Cart</string>
    <string name="Orders">Orders</string>

    <string name="SingOut">Sing Out</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="Forgot_pwd">Forgot Password?</string>

    <string name="facebook_app_id" translatable="false">442575784729445</string>
    
    <string name="facebook_login_protocol_name" translatable="false">fb442575784729445</string>
    <string name="title_activity_settings" translatable="false">settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
</resources>