<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_run"
            android:title="Menu" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_car"
            android:title="@string/Cart" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_clock"
            android:title="@string/Orders" />

        <item
            android:id="@+id/nav_ChangePassword"
            android:icon="@drawable/ic_secury"
            android:title="@string/ChangePassword" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_out"
            android:title="@string/SingOut" />
    </group>
</menu>