<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:orientation="vertical"
    tools:context=".settingsac">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/action_settings"
            android:textSize="35dp"
            android:textColor="@color/overlayBackground"
            android:textStyle="bold"></TextView>





    </LinearLayout>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtAlto"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/Altocontraste"
            android:textSize="35dp"
            android:textColor="@color/overlayBackground"
            android:textStyle="bold"></TextView>
        <Switch
            android:id="@+id/swAlt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="132dp"></Switch>
        <TextView
            android:id="@+id/txtIdioma"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/language"
            android:textSize="35dp"
            android:textColor="@color/overlayBackground"
            android:textStyle="bold"></TextView>

        <Spinner
            android:id="@+id/spinner"

            android:layout_width="250dp"
            android:layout_height="60dp"></Spinner>
        <TextView
            android:id="@+id/txttamfuente"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/Tamañodefuente"
            android:textSize="35dp"
            android:textColor="@color/overlayBackground"
            android:textStyle="bold"></TextView>

        <SeekBar
            android:id="@+id/seekbarsize"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="237dp"></SeekBar>


    </LinearLayout>

</LinearLayout>